# number-founder

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: main.py
src/core/: __init__.py  args_parser.py  bar.py  output.py  patterns.py  search.py  useragents.py
