[tool.poetry]
name = "number-founder"
version = "0.1.0"
description = "Found number by pattern in file or clipboar"
authors = ["Organ13at0r <Organ13at0r_official@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.5"
clipboard = "^0.0.4"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
