[tool.poetry]
name = "number-founder"
version = "0.1.0"
description = "Found number by pattern in text files, clipboard or pdf files."
authors = ["Organ13at0r <Organ13at0r_official@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.5"
argparse = "^1.4.0"
pyperclip = "^1.8.2"
PyPDF2 = "^2.10.9"
colorama = "^0.4.5"
requests = "^2.28.1"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
